# Synapse_in_the_Void

./: .gitignore  CMakeLists.txt  README.md
include/: characters.h  relationships.h  utils.h
src/: characters.c  main.c  relationships.c  testingbuffer.c  utils.c
