cmake_minimum_required(VERSION 3.5)
project(SYNAPSE_IN_THE_VOID VERSION 0.1 LANGUAGES C)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY      ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY      ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY      ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_COMPILE_PDB_OUTPUT_DIRECTORY  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/symbols)
set(CMAKE_PDB_OUTPUT_DIRECTORY          ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/symbols)

set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(SRCS main.c)

list(TRANSFORM SRCS PREPEND ${SRC_DIR}/)
add_executable(${PROJECT_NAME} ${SRCS})
target_include_directories(${PROJECT_NAME} PRIVATE ${GVC_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${GVC_LIBRARIES})